<resources>
    <string name="app_name">GreenEarthApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="more_fragment">More Fragment</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="see_all">See All</string>
    <string name="flat_off_text">flat %.2f\%% off</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="login">Login</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="user_name">User Name</string>
    <string name="number">Number</string>
    <string name="village">Village</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
</resources>